2009-02-25  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/gtksourcemark.c: chain up finalize.

=== gtksourceview 2.5.5 ===

2009-02-15  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.5

2009-02-10  Johannes Schmid  <jhs@gnome.org>

	* gtksourceview/gtksourceview.c (update_current_line_color):
	#570492 – Canot open editor - crash

2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	Mark strings for translation.

2009-02-04  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/cobalt.xml:
	* gtksourceview/language-specs/Makefile.am:
	Add new blue based style. Thanks to Will Farrington.

=== gtksourceview 2.5.4 ===

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.4

2009-02-02  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: support matlab
	multiline comments. Patch by Brendan Bycroft.
	(Fixes bug #556365).

2009-01-30  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/rpmspec.lang:
	Add %else to rpm spec language. Patch by Matthias Clasen.
	(Fixes bug #569771).

=== gtksourceview 2.5.3 ===

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.5.3

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/php.lang: add
	missing "endif" keyword.

2009-01-19  Paolo Borelli  <paolo.borelli@katamail.com>

	* gtksourceview/language-specs/dosbatch.lang:
        * gtksourceview/language-specs/Makefile.am:
        * gtksourceview/language-specs/testfiles.sh:
        * po/POTFILES.in:
	Add a very simle lang file for dos batch files.

2009-01-15  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/language-specs/asp.lang:
	Updated. Thanks to Fabio Nagao.
