@@ -1,3 +1,7 @@
+2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* tests/test-widget.c: Replace deprecated gtk symbol. Bug #572085
+
 2009-02-25  Paolo Borelli  <paolo.borelli@katamail.com>
 
 	* gtksourceview/gtksourcemark.c: chain up finalize.
